// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI5Config add/find/update/removeCustomMiddleware addCustomMiddleware 1`] = `
"server:
  customMiddleware:
    - name: custom-middleware
      afterMiddleware: ~otherMiddleware
      configuration:
        ui5:
          path:
            - /resources
            - /test-resources
          url: http://ui5.example
        version: 1.95.1
        debug: true
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware removeMiddleware 1`] = `
"server:
  customMiddleware: []
"
`;

exports[`UI5Config add/find/removeCustomTask addCustomTask 1`] = `
"builder:
  customTasks:
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: my-archive
"
`;

exports[`UI5Config add/find/removeCustomTask removeCustomTask 1`] = `
"builder:
  customTasks: []
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware updateMiddleware existing middleware 1`] = `
"server:
  customMiddleware:
    - name: custom-middleware
      afterMiddleware: ~newMiddleware
      configuration:
        newValue:
          should: overwrite existing
"
`;

exports[`UI5Config add/find/update/removeCustomMiddleware updateMiddleware that did not exist, should add it 1`] = `
"server:
  customMiddleware:
    - name: custom-middleware
      afterMiddleware: ~otherMiddleware
      configuration:
        ui5:
          path:
            - /resources
            - /test-resources
          url: http://ui5.example
        version: 1.95.1
        debug: true
"
`;

exports[`UI5Config addAbapDeployTask AppStudio + Steampunk settings 1`] = `
"builder:
  resources:
    - excludes:
        - /test/**
        - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          destination: ~destination~
          scp: true
        app:
          name: ~name
          desription: ~description
          package: ~package
          transport: ~transport
"
`;

exports[`UI5Config addAbapDeployTask local settings 1`] = `
"builder:
  resources:
    - excludes:
        - /test/**
        - /localService/**
  customTasks:
    - name: deploy-to-abap
      afterTask: generateCachebusterInfo
      configuration:
        target:
          url: http://localhost:8080
          client: '012'
        app:
          name: ~name
          desription: ~description
          package: ~package
          transport: ~transport
"
`;

exports[`UI5Config addBackendToFioriToolsProxydMiddleware add proxy without out backend first and then call add backend 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
        backend:
          - url: http://localhost:8080
            path: /~testpath~
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add backend with flexible parameters (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            pathPrefix: /~prefix
            scp: true
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add backend without destination (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            client: '012'
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add backend without path or destination (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add commonly configured backend (and UI5 defaults) 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        backend:
          - url: http://localhost:8080
            path: /~testpath~
            destination: ~destination~
            destinationInstance: ~destinationInstance~
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add without backend or UI5 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add without backend or but UI5 defaults 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
"
`;

exports[`UI5Config addFioriToolsProxydMiddleware add without backend or but all properties for UI5 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /~customResources
            - /~other
          url: http://~url
          version: 1.23.3
          directLoad: true
"
`;

exports[`UI5Config addMockServerMiddleware add with given path 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /~testpath~
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
"
`;

exports[`UI5Config addMockServerMiddleware add without path 1`] = `
"server:
  customMiddleware:
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: ''
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
"
`;

exports[`UI5Config addUI5Framework Add with specific theme and additional library 1`] = `
"framework:
  name: SAPUI5
  version: 1.64.0
  libraries:
    - name: sap.m
    - name: themelib_sap_belize
"
`;

exports[`UI5Config addUI5Framework Minimal set of inputs 1`] = `
"framework:
  name: SAPUI5
  version: 1.64.0
  libraries:
    - name: themelib_sap_fiori_3
"
`;

exports[`UI5Config addUI5Framework Use a dark theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.64.0
  libraries:
    - name: sap.m
    - name: themelib_sap_fiori_3
"
`;

exports[`UI5Config addUI5Framework Use horizon high contrast black theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.96.0
  libraries:
    - name: sap.m
    - name: themelib_sap_horizon
"
`;

exports[`UI5Config addUI5Framework Use horizon high contrast white theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.96.0
  libraries:
    - name: sap.m
    - name: themelib_sap_horizon
"
`;

exports[`UI5Config addUI5Framework Use horizon high dark theme 1`] = `
"framework:
  name: SAPUI5
  version: 1.96.0
  libraries:
    - name: sap.m
    - name: themelib_sap_horizon
"
`;

exports[`UI5Config addUi5ToFioriToolsProxydMiddleware add ui5 config to empty tools middleware config 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          - path:
              - /~customResources
              - /~other
            url: http://~url
"
`;

exports[`UI5Config getAppReloadMiddlewareConfig 1`] = `
"server:
  customMiddleware:
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
"
`;

exports[`UI5Config setMetadata replace metadata 1`] = `
"metadata:
  name: the.replaced.name
"
`;

exports[`UI5Config setMetadata set name and copyright 1`] = `
"metadata:
  name: test.name
  copyright: ©
"
`;

exports[`UI5Config setType replace type 1`] = `
"type: library
"
`;

exports[`UI5Config setType set type 1`] = `
"type: application
"
`;
